# GPEP

./: .gitignore  README.md  cma.ipynb  cma_C.py  main.py  pepit_ex.py  pyproject.toml  test.ipynb
GPEP/: __init__.py  gpep.py
GPEP/const/: __init__.py
GPEP/expression/: __init__.py
GPEP/functions/: convex_lipschitz_function.py  smooth_function.py  smooth_strongly_convex_function.py
GPEP/operators/: __init__.py  abs.py  add.py  div.py  eq.py  mul.py  ne.py  sub.py
GPEP/variable/: __init__.py
assets/: compare_pepit.ipynb
pkg/: __init__.py  lcmaes_interface.py  pep.py
pkg/const/: __init__.py  const.py
pkg/expression/: __init__.py  constraint.py  expression.py
pkg/functions/: __init__.py  convex_function.py  convex_lipschitz_function.py  function.py  smooth_convex_function.py  smooth_function.py  smooth_strongly_convex_function.py
pkg/operators/: __init__.py  abs.py  add.py  div.py  dot.py  eq.py  exp.py  ge.py  gt.py  le.py  log.py  lt.py  max.py  min.py  mul.py  ne.py  norm.py  operator.py  pow.py  sub.py
pkg/variable/: __init__.py  variable.py
